Correction du menu z-index mis a 99 pour que le menu de navigation reste toujours au dessu.
Mise a jour de la messagerie integration de deux menu d'action, et d'un
div content qui contiendra tout les messages de l'utilisateur.

--- a/WebContent/css/menu.css
+++ b/WebContent/css/menu.css
@@ -4,7 +4,7 @@
 {
 	margin-top:0px;
 	width: 100%;
-
+	z-index: 99;
 }
 
 #mainMenu ul
@@ -17,6 +17,7 @@
 	padding: 0px;
 	background-color: #0066cc;
 	width: 100%;
+	z-index: 99;
 }
 
 #mainMenu ul a
