--- a/WebContent/css/messagerie.css
+++ b/WebContent/css/messagerie.css
@@ -1,94 +1,109 @@
-@CHARSET "ISO-8859-1";
+@CHARSET "UTF-8";
 
-body{
+/* ============================== Recherche ============================== */
+#recherche{
 	
-	background-image: url("../ressource/img/bg.jpg");
-	background-repeat:no-repeat;
-	background-position:center center;
-	background-attachment:fixed;
-	font-family: Arial, sans-serif;
-}
-
-/* Menu top */
-
-.menuTop {
-	
-	position: fixed;
-	left: 127px;
-	list-style-type: none;
-    margin-left: 0px;
-    margin-right: 100%;
-    padding: 0;
-    overflow: hidden;
-    background-color: #0066cc;
-	
-}
-
-li.menuItemTop{
-	
-	display: inline-block;
-	float: left;
-}
-
-.menuItemTop a{
-	
-	display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    
-}
-
-.menuItemTop:hover , li a:hover{
-	
-	background-color: #003399;
-    
-}
-
-/* Menu left */
-
-.menuLeft{
-	position: fixed;
+	position: absolute;
+	top: 60px;
 	left: 0px;
-	top: 200px;
-	border-top: 1px solid black;
-	border-left: 1px solid black;
+	height: 48px;
+	width: 170px;
+	background-color: #0066cc;
+	
+}
+
+/* ============================== Menu Top ============================== */
+#menuMessagerieTop{
+	
+	position: absolute;
+	left: 170px;
+	top: 60px;
+	height: 48px;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
+	background-color: #0066cc;
+	border: 1px solid black;
+}
+
+#menuMessagerieTop ul {
+	
+	float: left;
+	margin: 0px;
+	padding: 0px;
+	display: inline-block;
 	list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #0066cc;
-    width: 125px;
 	
 }
 
-li.menuLeft{
+#menuMessagerieTop ul li{
 	
+	float: left;
+	display: inline-block;
+	list-style-type: none;
+	width: 134px;
+	padding: 14px 16px;
+	border-right: 1px solid black;
+}
+
+#menuMessagerieTop ul li a{
+	
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	
+}
+
+/* ============================== Menu Left  ============================== */
+#menuMessagerieLeft{
+	
+	position: absolute;
+	top: 108px;
+	left: 0px;
+	height: 100%;
+	width: 170px;
+	margin: 0px;
+	padding: 0px;
+	background-color: #0066cc;
+	
+}
+
+#menuMessagerieLeft ul {
+	
+	float: left;
+	margin: 0px;
+	padding: 0px;
 	display: block;
+	list-style-type: none;
 	
 }
 
-.menuLeft a{
+#menuMessagerieLeft ul li{
 	
+	float: left;
 	display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    
+	list-style-type: none;
+	padding: 14px 16px;
+	border-top: 1px solid black;
+	
 }
 
-.menuLeft:hover	 , li a:hover{
+#menuMessagerieLeft ul li a{
 	
-	background-color: #003399;
-    
+	color: white;
+	text-decoration: none;
+	
 }
 
-.content{
+/*  ============================== Content message ============================== */
+#content{
 	
-	position: fixed;
-	left: 200px;
-	top: 200px;
+	position: absolute;
+	overflow: visible;
+	top: 110px;
+	left: 170px;
+	width: 100%;
+	height: 100%;
+	background-color: white;
 	
 }
